maked nav in base.html.twig,parent in templates and added bootstrap,css...

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %}    {{parent()}} - Category index{% endblock %}
 
 {% block body %}
+    {{parent()}}
     <h1>Category index</h1>
 
     <table class="table">
