--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -1,4 +1,12 @@
+
+{% extends 'base.html.twig' %}
+
+{% block title %}     {{parent()}} - Category Form{% endblock %}
+
+{% block body %}
+    {{parent()}}
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+{% endblock %}
