--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
+{% block title %}     {{parent()}} - Edit Category{% endblock %}
 
 {% block body %}
+    {{parent()}}
     <h1>Edit Category</h1>
 
     {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
