--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}    {{parent()}} - New Category{% endblock %}
 
 {% block body %}
+    {{parent()}}
     <h1>Create new Category</h1>
 
     {{ include('category/_form.html.twig') }}
