--- a/templates/posts/_delete_form.html.twig
+++ b/templates/posts/_delete_form.html.twig
@@ -1,5 +1,12 @@
+
+{% extends 'base.html.twig' %}
+
+{% block title %}    {{parent()}} - Delete Form {% endblock %}
+
+{% block body %}
 <form method="post" action="{{ path('posts_delete', {'id': posts.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ posts.id) }}">
     <button class="btn">Delete</button>
 </form>
+{% endblock %}
