--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -1,9 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Posts Index{% endblock %}
+{% block title %}    {{parent()}}- Posts Index{% endblock %}
 
 {% block body %}
-    <h1>Posts index</h1>
+    {{parent()}}
+<h1>Posts index</h1>
+
+    <a href="{{ path('posts_new') }}">Create new</a>
+<div class="count">
+    <p>Number of articles:{{ pagination.getTotalItemCount }}</p>
+</div>
+<table>
+    <tr>
+        {# sorting of properties based on query components #}
+       
+        <th>{{ knp_pagination_sortable(pagination, 'Nombre', 'a.id') }}</th>
+        <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
+            {{ knp_pagination_sortable(pagination, 'Foto', 'a.title') }}
+        </th>
+        <th{% if pagination.isSorted(['a.date', 'a.time']) %} class="sorted"{% endif %}>
+            {{ knp_pagination_sortable(pagination, 'Fecha de publicacion', ['a.date', 'a.time']) }}
+        </th>
+    </tr>
+
+    {# table body #}
+    {% for article in pagination %}
+        <tr {% if loop.index is odd %}class="color"{% endif %}>
+            <td>{{ article.name }}</td>
+            <td>{{ article.foto }}</td>
+            <td>{{ article.fecha_publicacion | date('Y-m-d') }}</td>
+        </tr>
+    {% endfor %}
+</table>
+{# display navigation #}
+<div class="navigation">
+    {{ knp_pagination_render(pagination) }}
+</div>
+----------------------------------------------------------------------
+{#     <h1>Posts index</h1>
 
     <a href="{{ path('posts_new') }}">Create new</a>
 
@@ -18,7 +52,7 @@
         <tbody>
          {% for post in posts %}
             <tr>
-            {{dump(post)}}
+            {{dump(post)}} #}
 {#                  <td>{{ post.id }}</td>
                 <td>{{ post.category.name }}</td>
                 <td>{{ post.name }}</td>
@@ -30,12 +64,12 @@
                     <a href="{{ path('posts_show', {'id': post.id}) }}">show</a>
                     <a href="{{ path('posts_edit', {'id': post.id}) }}">edit</a>
                 </td>  #}
-            </tr>
+{#             </tr>
         {% else %}
             <tr>
                 <td colspan="3">no records found</td>
             </tr>
-        {% endfor %} 
+        {% endfor %}  #}
         </tbody>
     </table>
 
