--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Posts{% endblock %}
+{% block title %} {{parent()}} - Post{% endblock %}
 
 {% block body %}
-    <h1>Posts</h1>
+    {{parent()}}
+{{dump(article)}}
+{#     <h1>Posts</h1>
 
     <table class="table">
         <tbody>
@@ -22,5 +24,5 @@
 
     <a href="{{ path('posts_edit', {'id': posts.id}) }}">edit</a>
 
-    {{ include('posts/_delete_form.html.twig') }}
+    {{ include('posts/_delete_form.html.twig') }} #}
 {% endblock %}
