--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
                 <div class="nav navbar-nav navbar-brand mx-auto">
                     <div class="nav-item"><a id="colorblack" href="{{path('dashboard')}}">Lenceria Ideal</a></div>
                 </div>
-                <div class="nav-item"><a id="colorblack" href="{{path('app_login')}}">Accede</a></div>
+                <div class="nav-item"><a id="colorblack" href="{{path('app_login')}}">Login</a></div>
             </nav>
             <nav class="navbar navbar-fixed-top">
                 <div class="container">
@@ -70,6 +70,7 @@
         
         <script src="{{asset('js/jquery.min.js')}}"></script>
         <script src="{{asset('js/bootstrap.min.js')}}"></script>
+        <script src="https://kit.fontawesome.com/c469a8b399.js" crossorigin="anonymous"></script>
 
         {% endblock %}
     </body>
