--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -3,34 +3,34 @@
 {% block title %}{{parent()}}{% endblock %}
 
 {% block body %}
-    {{parent()}}
+{{parent()}}
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 
-<div class="count">
-    <p>Articulos en total:{{ pagination.getTotalItemCount }}</p>
+<div class="container">
+    <div class="row">
+    {% for post in pagination %}
+        <div class="col-md-3 cursor">
+            <div class="bg-white rounded p-3 my-3" id="greybackground" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
+                <div class="d-flex bd-highlight rounded h-50" >
+                    <div class="p-2 flex-grow-1 bd-highlight ">
+                        <h3>{{post.name}}</h3>
+                        <div class="align-self-center">
+                            <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="100%" height="175px">
+                        </div>
+                        <div 
+                        <div class="bg-green"><i class="far fa-clock"></i><strong>Fecha de publicación: {{ post.fecha_publicacion | date}}</strong></div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+        {% endfor %}
+    </div>
 </div>
-<table>
-    <tr>
-        {# sorting of properties based on query components #}
-        <th>{{ knp_pagination_sortable(pagination, 'Nombre', 'a.id') }}</th>
-        <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
-            {{ knp_pagination_sortable(pagination, 'Foto', 'a.title') }}
-        </th>
-        <th{% if pagination.isSorted(['a.date', 'a.time']) %} class="sorted"{% endif %}>
-            {{ knp_pagination_sortable(pagination, 'Fecha de publicacion', ['a.date', 'a.time']) }}
-        </th>
-    </tr>
+<div class="d-flex justif-content-center">
+    <div class="navigation">
+        {{knp_pagination_render(pagination)}}
+    </div>
+</div>
 
-    {# table body #}
-    {% for article in pagination %}
-        <tr {% if loop.index is odd %}class="color"{% endif %}>
-            <td>{{ article.name }}</td>
-            <td>{{ article.foto }}</td>
-            <td>{{ article.fecha_publicacion | date('Y-m-d') }}</td>
-        </tr>
-    {% endfor %}
-</table>
-{# display navigation #}
-<div class="navigation">
-    {{ knp_pagination_render(pagination) }}
-</div>
 {% endblock %}
