--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -29,13 +29,12 @@
             
             <div class="text-justify my-3">
                 <p>{{post.contenido}}</p>
-                <p>Antes <s>{{post.precio}}</s> €</p>
-                <p>Ahora {{post.preciooferta}} €</p>
+                <p class="my-2 postTextSize"> Antes : <s>{{post.precio}}</s> <span id="colorRed">Ahora : {{post.preciooferta}} €</span>
             </div>
             <button type="button" class="btn btn-outline-danger">Añadir al carrito</button>
                 <hr>
-            <div style="color:#000;">
-                <i class="far fa-clock"></i>Fecha de publicación:{{post.fechapublicacion | date}}
+            <div class="publicationDate" style="color:#000;">
+                <i class="far fa-clock"></i>Fecha de publicación : {{post.fechapublicacion | date}}
             </div>
         </div>
     </div>
