--- a/templates/posts/_form.html.twig
+++ b/templates/posts/_form.html.twig
@@ -6,6 +6,7 @@
 {% block body %}
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-outline-success">{{ button_label|default('Guardar') }}</button>
+    <a href="{{ path('posts_index') }}" id="colorRed">Cancelar</a>
 {{ form_end(form) }}
 {% endblock %}
