--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
                 <div class="nav navbar-nav navbar-brand mx-auto">
                     <div class="nav-item"><a id="colorblack" href="{{path('dashboard')}}">Lenceria Ideal</a></div>
                 </div>
-                <div class="nav-item"><a id="colorblack" href="{{path('app_login')}}">Login</a></div>
+                <div class="nav-item"><a href="{{path('app_login')}}"><i class="far fa-user" id="colorblack"></i></a></div>
             </nav>
             <nav class="navbar navbar-fixed-top">
                 <div class="container">
