--- a/templates/category/_delete_form.html.twig
+++ b/templates/category/_delete_form.html.twig
@@ -4,11 +4,10 @@
 {% block title %}     {{parent()}} - Delete Category{% endblock %}
 
 {% block body %}
-    {{parent()}}
 <form method="post" action="{{ path('category_delete', {'id': category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger" id="colorRed">Borrar</button>
 </form>
 
 {% endblock %}
