--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}    {{parent()}} - New Category{% endblock %}
+{% block title %}    {{parent()}} - Nueva Categoría{% endblock %}
 
 {% block body %}
     {{parent()}}
-    <h1>Create new Category</h1>
+    <h4>Crear nueva categoría</h4>
 
     {{ include('category/_form.html.twig') }}
 
-    <a href="{{ path('category_index') }}">back to list</a>
+    <a href="{{ path('category_index') }}">Regresar</a>
 {% endblock %}
