--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,27 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}    {{parent()}} - Category{% endblock %}
+{% block title %}    {{parent()}} - Categoría{% endblock %}
 
 {% block body %}
     {{parent()}} 
-    <h1>Category</h1>
+    <h4>Categoría</h4>
 
     <table class="table">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th>Nombre</th>
                 <td>{{ category.name }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('category_index') }}">back to list</a>
-
-    <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
+    <a href="{{ path('category_index') }}">Regresar </a>
+    /
+    <a href="{{ path('category_edit', {'id': category.id}) }}"> Editar</a>
 
     {{ include('category/_delete_form.html.twig') }}
 {% endblock %}
