--- a/templates/posts/_delete_form.html.twig
+++ b/templates/posts/_delete_form.html.twig
@@ -7,6 +7,6 @@
 <form method="post" action="{{ path('posts_delete', {'id': posts.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ posts.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">Borrar</button>
 </form>
 {% endblock %}
