--- a/templates/posts/edit.html.twig
+++ b/templates/posts/edit.html.twig
@@ -1,14 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}    {{parent()}} - Edit Post{% endblock %}
+{% block title %}    {{parent()}} - Editar Artículo{% endblock %}
 
 {% block body %}
     {{parent()}}
-    <h1>Edit Posts</h1>
+    <h4>Editar artículo</h4>
 
-    {{ include('posts/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('posts/_form.html.twig', {'button_label': 'Guardar cambios'}) }}
 
-    <a href="{{ path('posts_index') }}">back to list</a>
 
     {{ include('posts/_delete_form.html.twig') }}
 {% endblock %}
