--- a/templates/posts/new.html.twig
+++ b/templates/posts/new.html.twig
@@ -4,9 +4,16 @@
 
 {% block body %}
     {{parent()}}
-    <h1>Create new Post</h1>
+    <br>
 
-    {{ include('posts/_form.html.twig') }}
+    <div class="container h-100">
+                <div class="row h-100 justify-content-center align-items-center">
+                    <div class="col-6 bg-white rounded my-3 p-5">
+                        <h4>Añadir un nuevo artículo</h4>
 
-    <a href="{{ path('posts_index') }}">back to list</a>
+                        {{ include('posts/_form.html.twig') }}
+                        
+                    </div>
+                </div>
+            </div>
 {% endblock %}
