--- a/templates/registro/index.html.twig
+++ b/templates/registro/index.html.twig
@@ -1,13 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RegistroController!{% endblock %}
+{% block title %}{{parent()}} - Registrarse{% endblock %}
 
 {% block body %}
+{{parent()}}
+    <div class="container h-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-6 bg-white rounded my-3 p-5">
+                <h4>¿No tienes cuenta? Regístrate</h4>
+                {{form(formulario)}}
+            </div>
+        </div>
+    </div>
     {% for message in app.flashes('exito') %}
         <div class="alert-success">
             {{message}}
         </div>
         {% endfor %}
-{{form(formulario)}}
+
 
 {% endblock %}
