--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -13,6 +13,9 @@
                 <td>{{ category.id }}</td>
                 <th>Nombre</th>
                 <td>{{ category.name }}</td>
+                                <th>Nombre</th>
+                <td>{{ category.name }}</td>
+
             </tr>
         </tbody>
     </table>
