--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -36,13 +36,13 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
-    font-family: 'HMSansLatin-Regular', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 
 
 }
 
 h1,h2,h3,h4,h5,h6{
-    font-family: 'HMSansLatin-Regular', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: #000;
     text-align: center;
 }
@@ -96,7 +96,7 @@ h1,h2,h3,h4,h5,h6{
 }
 .imgpost{
     width:325px;
-    height:300px;
+    height:375px;
     padding:0px;
     border-radius: 2%;
 }
