--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,11 @@
 
         <link rel="stylesheet" href="{{asset('css/bootstrap.min.css')}}">
         <link rel="stylesheet" href="{{asset('css/stylesheet.css')}}">
-        
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
+    
         {% block body %}
             <nav class="navbar navbar-fixed-top main-nav">
                 <div class="nav navbar-nav navbar-brand mx-auto">
