--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -7,5 +7,6 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn btn-outline-success">{{ button_label|default('Crear') }}</button>
+    <a href="{{ path('category_index') }}" id="colorRed">Cancelar</a>
 {{ form_end(form) }}
 {% endblock %}
