--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -4,9 +4,16 @@
 
 {% block body %}
     {{parent()}}
-    <h4>Crear nueva categoría</h4>
 
-    {{ include('category/_form.html.twig') }}
 
-    <a href="{{ path('category_index') }}">Regresar</a>
+    <br>
+
+    <div class="container h-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-6 bg-white rounded my-3 p-5">
+                <h4>Crear nueva categoría</h4>
+                    {{ include('category/_form.html.twig') }}   
+            </div>
+        </div>
+    </div>
 {% endblock %}
