--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -4,12 +4,14 @@
 
 {% block body %}
 {{parent()}}
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 
 
-
-</div>
-<br>
+            {% if app.user %}
+                <div class="mb-3" style="text-align:right">
+                    <p>Hola {{ app.user.nombre }} ! </p> 
+                    <a href="{{ path('app_logout') }}" style="font-size:10px">Salir</a>
+                </div>
+            {% endif %}
 <div class="container">
     <h3>Todos los artículos</h3>
     <div class="row postsRow">
@@ -18,9 +20,9 @@
                 <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
                     <h3>{{post.name}}</h3>
                         <div class="align-self-center">
-                            <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="100%" height="175px">
+                            <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="175px">
                                 <div class="text-center postTextSize">
-                                <p class="my-2"> Antes : <s>{{post.precio}}</s> <span id="colorRed">Ahora : {{post.precio_oferta}} €</span>
+                                <p class="my-2"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span>
                                     <button type="button" class="btn btn-light btn-sm">
                                         <i class="fas fa-cart-arrow-down"></i>
                                     </button>
@@ -29,7 +31,7 @@
                                 <div class="publicationDate">
                                     <br>
                                     <p><i class="far fa-clock" style="color:#000"></i>
-                                     Fecha de publicación: {{ post.fecha_publicacion | date}}</p>
+                                     Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
                                 </div>
                         </div>
                     <hr>
@@ -67,7 +69,7 @@
                 <td>{{ post.category.name }}</td>
                 <td>{{ post.name }}</td>
                 <td>{{ post.foto }}</td>
-                <td>{{ post.preciooferta }}</td>
+                <td>{{ post.precioOferta }}</td>
                 <td>{{ post.sku }}</td>
 
                 <td>
