--- a/templates/registro/index.html.twig
+++ b/templates/registro/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
 {{parent()}}
+    {% for message in app.flashes('exito') %}
+        <div style="text-align:center">
+            {{message}}
+        </div>
+        {% endfor %}
+
     <div class="container h-100">
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-6 bg-white rounded my-3 p-5">
@@ -12,11 +18,6 @@
             </div>
         </div>
     </div>
-    {% for message in app.flashes('exito') %}
-        <div class="alert-success">
-            {{message}}
-        </div>
-        {% endfor %}
 
 
 {% endblock %}
